# mlops_journey

./: LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: tests.yml
data/: make_dataset.py
docs/: mkdocs.yaml
models/: model.py  train_models.py
tests/: test_data.py  test_model.py
